--- a/index.html
+++ b/index.html
@@ -1,24 +1,40 @@
 <!DOCTYPE html>
 <html lang="ro-RO">
-<head>
-    <title>Document</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Resurse utile pentru oricine vrea să învețe matematică.">
-    <meta property="og:description" content="Resurse utile pentru oricine vrea să învețe matematică.">
-    <meta property="og:title" content="Cristina Dinescu">
-    <meta property="og:site_name" content="Cristina Dinescu">
-    <meta property="og:type" content="website">
-    <meta property="og:locale" content="ro_RO">
-    <meta property="og:url" content="https://www.blog-de-matematica.ro/">      
-    <meta property="og:image" content="images/og-image.jpg">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="630">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon.png" />
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
+
+    <head>
+        <title>Math |</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Resurse utile pentru oricine vrea să învețe matematică.">
+        <meta property="og:description" content="Resurse utile pentru oricine vrea să învețe matematică.">
+        <meta property="og:title" content="Cristina Dinescu">
+        <meta property="og:site_name" content="Cristina Dinescu">
+        <meta property="og:type" content="website">
+        <meta property="og:locale" content="ro_RO">
+        <meta property="og:url" content="https://www.blog-de-matematica.ro/">      
+        <meta property="og:image" content="images/og-image.png">
+        <meta property="og:image:width" content="1200">
+        <meta property="og:image:height" content="630">
+        <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-color.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-color.png" />
+        <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
+    </head>
+
+    <body>
+        <div class="AppWrapper">
+            <div class="MainContent">
+                <img src="images/logo.png" class="MainTitle" width="300" height="200"></img>
+                <h2 class="MainAuthor">Autor <span></span> | <span>Cristina Dinescu</span></h2>
+                <div class="Resource">
+                    <ul class="ResourceList">
+                        <a href="#" class="ResourceLink"><li class="ResourceItem">Materiale ajutătoare</li></a>
+                        <a href="#" class="ResourceLink"><li class="ResourceItem">Lecții</li></a>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
