--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ro-RO">
 
     <head>
-        <title>Math |</title>
+        <title>Learn | Math</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Resurse utile pentru oricine vrea să învețe matematică.">
@@ -25,16 +25,23 @@
 
     <body>
         <div class="AppWrapper">
-            <div class="MainContent">
-                <img src="images/logo.png" class="MainTitle" width="300" height="200"></img>
-                <h2 class="MainAuthor">Autor <span></span> | <span>Cristina Dinescu</span></h2>
+            <header>
+                <div class="MainContent">
+                    <img src="images/logo.png" class="MainTitle" width="300" height="200"></img>
+                    <h2 class="MainAuthor">Autor <span></span> | <span>Cristina Dinescu</span></h2>
+                </div>
+            </header>
+            <main>
                 <div class="Resource">
                     <ul class="ResourceList">
                         <a href="#" class="ResourceLink"><li class="ResourceItem">Materiale ajutătoare</li></a>
                         <a href="#" class="ResourceLink"><li class="ResourceItem">Lecții</li></a>
                     </ul>
                 </div>
-            </div>
-        </div>
+            </main>
+            <footer>
+                <p>Bibliotecă personală de resurse matematice.</p>
+            </footer>
+        </div>  
     </body>
 </html>
