--- a/index.html
+++ b/index.html
@@ -34,8 +34,12 @@
             <main>
                 <div class="Resource">
                     <ul class="ResourceList">
-                        <a href="#" class="ResourceLink"><li class="ResourceItem">Materiale ajutătoare</li></a>
-                        <a href="#" class="ResourceLink"><li class="ResourceItem">Lecții</li></a>
+                        <a href="#" class="ResourceLink">
+                            <li class="ResourceItem">Materiale ajutătoare<br><span>nivel: gimnazial, liceal</span></li>
+                        </a>
+                        <a href="#" class="ResourceLink">
+                            <li class="ResourceItem">Lecții<br><span>nivel: gimnazial, liceal</span></li>
+                        </a>
                     </ul>
                 </div>
             </main>
