create link pages

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             <main>
                 <div class="Resource">
                     <ul class="ResourceList">
-                        <a href="#" class="ResourceLink">
+                        <a href="materiale.html" class="ResourceLink">
                             <li class="ResourceItem">Materiale ajutătoare<br><span>nivel: gimnazial, liceal</span></li>
                         </a>
-                        <a href="#" class="ResourceLink">
+                        <a href="lectii.html" class="ResourceLink">
                             <li class="ResourceItem">Lecții<br><span>nivel: gimnazial, liceal</span></li>
                         </a>
                     </ul>
