footer dimensions fixed

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <title>Learn | Math</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Resurse utile pentru oricine vrea să învețe matematică.">
+        <meta name="description" content="Bibliotecă personală de resurse matematice.">
         <meta property="og:description" content="Resurse utile pentru oricine vrea să învețe matematică.">
         <meta property="og:title" content="Cristina Dinescu">
         <meta property="og:site_name" content="Cristina Dinescu">
         <meta property="og:type" content="website">
         <meta property="og:locale" content="ro_RO">
-        <meta property="og:url" content="https://www.blog-de-matematica.ro/">      
+        <meta property="og:url" content="https://gasacu.github.io/mathematics/">      
         <meta property="og:image" content="images/og-image.png">
         <meta property="og:image:width" content="1200">
         <meta property="og:image:height" content="630">
@@ -34,17 +34,20 @@
             <main>
                 <div class="Resource">
                     <ul class="ResourceList">
-                        <a href="materiale.html" class="ResourceLink">
+                        <a href="materials.html" class="ResourceLink">
                             <li class="ResourceItem">Materiale ajutătoare<br><span>nivel: gimnazial, liceal</span></li>
                         </a>
-                        <a href="lectii.html" class="ResourceLink">
+                        <a href="lectures.html" class="ResourceLink">
+                            <li class="ResourceItem">Rezolvări Subiecte<br><span>Evaluare Națională, Bac, Titularizare, Definitivat</span></li>
+                        </a>
+                        <a href="lectures.html" class="ResourceLink">
                             <li class="ResourceItem">Lecții<br><span>nivel: gimnazial, liceal</span></li>
                         </a>
                     </ul>
                 </div>
             </main>
             <footer>
-                <p>Bibliotecă personală de resurse matematice.</p>
+                <p class="FooterText">Bibliotecă personală de resurse matematice.</p>
             </footer>
         </div>  
     </body>
