main page completed

--- a/index.html
+++ b/index.html
@@ -24,31 +24,34 @@
     </head>
 
     <body>
-        <div class="AppWrapper">
-            <header>
+        <div class="MainContainer">
+            <header class="MainHeader">
                 <div class="MainContent">
                     <img src="images/logo.png" class="MainTitle" width="300" height="200"></img>
                     <h2 class="MainAuthor">Autor <span></span> | <span>Cristina Dinescu</span></h2>
                 </div>
             </header>
-            <main>
-                <div class="Resource">
-                    <ul class="ResourceList">
-                        <a href="materials.html" class="ResourceLink">
-                            <li class="ResourceItem">Materiale ajutătoare<br><span>nivel: gimnazial, liceal</span></li>
+
+            <main class="MainMain">
+                <div class="MainResource">
+                    <ul class="MainResourceList">
+                        <a href="materials.html" class="MainResourceLink">
+                            <li class="MainResourceItem">Materiale ajutătoare<br><span>nivel: gimnazial, liceal</span></li>
                         </a>
-                        <a href="lectures.html" class="ResourceLink">
-                            <li class="ResourceItem">Rezolvări Subiecte<br><span>Evaluare Națională, Bac, Titularizare, Definitivat</span></li>
+                        <a href="lectures.html" class="MainResourceLink">
+                            <li class="MainResourceItem">Rezolvări Subiecte<br><span>Evaluare Națională, Bac, Titularizare, Definitivat</span></li>
                         </a>
-                        <a href="lectures.html" class="ResourceLink">
-                            <li class="ResourceItem">Lecții<br><span>nivel: gimnazial, liceal</span></li>
+                        <a href="lectures.html" class="MainResourceLink">
+                            <li class="MainResourceItem">Lecții<br><span>nivel: gimnazial, liceal</span></li>
                         </a>
                     </ul>
                 </div>
             </main>
-            <footer>
+
+            <footer class="MainFooter">
                 <p class="FooterText">Bibliotecă personală de resurse matematice.</p>
             </footer>
-        </div>  
+        </div>
+        <script defer src="script.js"></script>  
     </body>
 </html>
