materials page mobile navbar

--- a/materials.html
+++ b/materials.html
@@ -27,37 +27,37 @@
     <body>
         <div class="MaterialsContainer">
             <header class="MaterialsHeader">
-                <nav class="MaterialsHeaderNav">
+                <div class="MaterialsHeaderNav">
                     <div class="NavLeft">
-                        <a href="#"><h2 class="NavLeftTitleOne" title="Înapoi la pagina principală">BIBLIOTECĂ PERSONALĂ DE RESURSE MATEMATICE</h2></a> 
+                        <a href="#" class="NavLeftTitleOne" title="Înapoi la pagina principală">BIBLIOTECĂ PERSONALĂ DE RESURSE MATEMATICE</a> 
                         <h4 class="NavLeftTitleTwo">AUTOR: Prof. Cristina Dinescu</h4>
                     </div>
                     <button class="NavRightTrigger">
                         <img src="images/menu-trigger.png" alt="Deschide meniul" class="NavRightTriggerImage" width="32" height="32">
                     </button>
-                    <div class="NavRight">
+                    <nav class="NavRight">
                         <ul class="NavRightList">
                             <li class="NavRightListItem">
-                                <a href="#gimnaziu" class="NavRightLink"><h3>Nivel gimnazial</h3></a>
+                                <a href="#gimnaziu" class="NavRightListItemLink"><h3>Nivel gimnazial</h3></a>
                                 <ul class="NavRightSubList">
-                                    <li class="NavRightSubListItem">Clasa a V-a</li>
-                                    <li class="NavRightSubListItem">Clasa a VI-a</li>
-                                    <li class="NavRightSubListItem">Clasa a VII-a</li>
-                                    <li class="NavRightSubListItem">Clasa a VIII-a</li>
+                                    <li class="NavRightSubListItem"><a href="#" class="NavRightSubListItemLink">Clasa a V-a</a></li>
+                                    <li class="NavRightSubListItem"><a href="#" class="NavRightSubListItemLink">Clasa a VI-a</a></li>
+                                    <li class="NavRightSubListItem"><a href="#" class="NavRightSubListItemLink">Clasa a VII-a</a></li>
+                                    <li class="NavRightSubListItem"><a href="#" class="NavRightSubListItemLink">Clasa a VIII-a</a></li>
                                 </ul>
                             </li>
                             <li class="NavRightListItem">
-                                <a href="#liceu" class="NavRightLink"><h3>Nivel liceal</h3></a>
+                                <a href="#liceu" class="NavRightListItemLink"><h3>Nivel liceal</h3></a>
                                 <ul class="NavRightSubList">
-                                    <li class="NavRightSubListItem">Clasa a IX-a</li>
-                                    <li class="NavRightSubListItem">Clasa a X-a</li>
-                                    <li class="NavRightSubListItem">Clasa a XI-a</li>
-                                    <li class="NavRightSubListItem">Clasa a XII-a</li>
+                                    <li class="NavRightSubListItem"><a href="#" class="NavRightSubListItemLink">Clasa a IX-a</a></li>
+                                    <li class="NavRightSubListItem"><a href="#" class="NavRightSubListItemLink">Clasa a X-a</a></li>
+                                    <li class="NavRightSubListItem"><a href="#" class="NavRightSubListItemLink">Clasa a XI-a</a></li>
+                                    <li class="NavRightSubListItem"><a href="#" class="NavRightSubListItemLink">Clasa a XII-a</a></li>
                                 </ul>
                             </li>
                         </ul>
-                    </div> 
-                </nav>
+                    </nav>
+                </div>
             </header>
     
             <main class="MaterialsMain">
