--- a/materials.html
+++ b/materials.html
@@ -44,7 +44,7 @@
                     <nav class="NavRight" id="navMenu">
                         <ul class="NavRightList">
                             <li class="NavRightListItem">
-                                <a href="#gimnaziu" class="NavRightListItemLink"><h3>Nivel gimnazial</h3></a>
+                                <a href="#gimnaziu" class="NavRightListItemLink"><h3>Nivel gimnazial ▼</h3></a>
                                 <ul class="NavRightSubList">
                                     <li class="NavRightSubListItem"><a href="#" class="NavRightSubListItemLink">Clasa a V-a</a></li>
                                     <li class="NavRightSubListItem"><a href="#" class="NavRightSubListItemLink">Clasa a VI-a</a></li>
@@ -53,7 +53,7 @@
                                 </ul>
                             </li>
                             <li class="NavRightListItem">
-                                <a href="#liceu" class="NavRightListItemLink"><h3>Nivel liceal</h3></a>
+                                <a href="#liceu" class="NavRightListItemLink"><h3>Nivel liceal ▼</h3></a>
                                 <ul class="NavRightSubList">
                                     <li class="NavRightSubListItem"><a href="#" class="NavRightSubListItemLink">Clasa a IX-a</a></li>
                                     <li class="NavRightSubListItem"><a href="#" class="NavRightSubListItemLink">Clasa a X-a</a></li>
