creating html pages for materials

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
             <main class="MainMain">
                 <div class="MainResource">
                     <ul class="MainResourceList">
-                        <a href="materials.html" class="MainResourceLink">
+                        <a href="/Materials/materials.html" class="MainResourceLink">
                             <li class="MainResourceItem">Materiale ajutătoare<br><span>nivel: gimnazial, liceal</span></li>
                         </a>
-                        <a href="lectures.html" class="MainResourceLink">
+                        <a href="/Problems/problems.html" class="MainResourceLink">
                             <li class="MainResourceItem">Rezolvări Subiecte<br><span>Evaluare Națională, Bac, Titularizare, Definitivat</span></li>
                         </a>
-                        <a href="lectures.html" class="MainResourceLink">
+                        <a href="/Lectures/lectures.html" class="MainResourceLink">
                             <li class="MainResourceItem">Lecții<br><span>nivel: gimnazial, liceal</span></li>
                         </a>
                     </ul>
