--- a/materials.html
+++ b/materials.html
@@ -12,12 +12,12 @@
             <meta property="og:type" content="website">
             <meta property="og:locale" content="ro_RO">
             <meta property="og:url" content="https://www.blog-de-matematica.ro/">      
-            <meta property="og:image" content="/images/og-image.png">
+            <meta property="og:image" content="images/og-image.png">
             <meta property="og:image:width" content="1200">
             <meta property="og:image:height" content="630">
-            <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-white.png" />
-            <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-white.png" />
-            <link rel="stylesheet" href="/style.css">
+            <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-white.png" />
+            <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-white.png" />
+            <link rel="stylesheet" href="style.css">
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
@@ -29,17 +29,17 @@
             <header class="MaterialsHeader">
                 <div class="MaterialsHeaderNav">
                     <div class="NavLeft">
-                        <a href="/index.html" title="Înapoi la pagina principală">
-                            <img src="/images/home-materials.png" class="NavLeftImage" width="44" height="44">
+                        <a href="index.html" title="Înapoi la pagina principală">
+                            <img src="images/home-materials.png" class="NavLeftImage" width="44" height="44">
                             <p class="NavLeftTitleOne">BIBLIOTECĂ PERSONALĂ DE RESURSE MATEMATICE</p>
                         </a>
                         <div class="NavLeftTitleTwo">
-                            <img src="/images/author.png" width="23" height="23">
+                            <img src="images/author.png" width="23" height="23">
                             <h4>Prof. <span>Cristina Dinescu</span></h4>
                         </div>
                     </div>
                     <button class="NavRightTrigger" id="navTrigger">
-                        <img src="/images/menu-trigger.png" alt="Deschide meniul" class="NavRightTriggerImage" width="32" height="32">
+                        <img src="images/menu-trigger.png" alt="Deschide meniul" class="NavRightTriggerImage" width="32" height="32">
                     </button>
                     <nav class="NavRight" id="navMenu">
                         <ul class="NavRightList">
@@ -84,6 +84,6 @@
             <!--    <p class="MaterialsFooterText">Bibliotecă personală de resurse matematice.</p> -->
             </footer>
         </div>
-        <script defer src="/script.js"></script>
+        <script defer src="script.js"></script>
     </body>
 </html>
