all index pages background

--- a/materials.html
+++ b/materials.html
@@ -68,7 +68,7 @@
     
             <main class="MaterialsMain">
                 <section class="MaterialsMainSection">
-                    <h1 class="MaterialsMainTitle">Resurse utile</h1>
+                    <h1 class="MaterialsMainTitle">Materiale ajutătoare</h1>
                 </section>
 
                 <section class="MaterialsGimnaziuSection">
