final first page

--- a/lectures.html
+++ b/lectures.html
@@ -2,7 +2,7 @@
 <html lang="ro-RO">
     <head>
         <head>
-            <title>Materiale ajutătoare</title>
+            <title>Lecții</title>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <meta name="description" content="Materiale utile pentru nivelul gimnazial și nivelul liceal.">
