--- a/problems.html
+++ b/problems.html
@@ -2,7 +2,7 @@
 <html lang="ro-RO">
     <head>
         <head>
-            <title>Materiale ajutătoare</title>
+            <title>Rezolvări subiecte</title>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <meta name="description" content="Materiale utile pentru nivelul gimnazial și nivelul liceal.">
@@ -44,40 +44,16 @@
                     <nav class="NavRight" id="navMenu">
                         <ul class="NavRightList">
                             <li class="NavRightListItem">
-                                <a href="#" class="NavRightListItemLink"><h3>Evaluare Națională ▼</h3></a>
-                                <ul class="NavRightSubList">
-                                    <li class="NavRightSubListItem"><a href="clasa-a-v-a.html" class="NavRightSubListItemLink">Clasa a V-a</a></li>
-                                    <li class="NavRightSubListItem"><a href="clasa-a-vi-a.html" class="NavRightSubListItemLink">Clasa a VI-a</a></li>
-                                    <li class="NavRightSubListItem"><a href="clasa-a-vii-a.html" class="NavRightSubListItemLink">Clasa a VII-a</a></li>
-                                    <li class="NavRightSubListItem"><a href="clasa-a-viii-a.html" class="NavRightSubListItemLink">Clasa a VIII-a</a></li>
-                                </ul>
+                                <a href="#" class="NavRightListItemLink"><h3>Evaluare Națională</h3></a>
                             </li>
                             <li class="NavRightListItem">
-                                <a href="#" class="NavRightListItemLink"><h3>Bacalaureat ▼</h3></a>
-                                <ul class="NavRightSubList">
-                                    <li class="NavRightSubListItem"><a href="clasa-a-ix-a.html" class="NavRightSubListItemLink">Clasa a IX-a</a></li>
-                                    <li class="NavRightSubListItem"><a href="clasa-a-x-a.html" class="NavRightSubListItemLink">Clasa a X-a</a></li>
-                                    <li class="NavRightSubListItem"><a href="clasa-a-xi-a.html" class="NavRightSubListItemLink">Clasa a XI-a</a></li>
-                                    <li class="NavRightSubListItem"><a href="clasa-a-xii-a.html" class="NavRightSubListItemLink">Clasa a XII-a</a></li>
-                                </ul>
+                                <a href="#" class="NavRightListItemLink"><h3>Bacalaureat</h3></a>
                             </li>
                             <li class="NavRightListItem">
-                                <a href="#" class="NavRightListItemLink"><h3>Titularizare ▼</h3></a>
-                                <ul class="NavRightSubList">
-                                    <li class="NavRightSubListItem"><a href="clasa-a-ix-a.html" class="NavRightSubListItemLink">Clasa a IX-a</a></li>
-                                    <li class="NavRightSubListItem"><a href="clasa-a-x-a.html" class="NavRightSubListItemLink">Clasa a X-a</a></li>
-                                    <li class="NavRightSubListItem"><a href="clasa-a-xi-a.html" class="NavRightSubListItemLink">Clasa a XI-a</a></li>
-                                    <li class="NavRightSubListItem"><a href="clasa-a-xii-a.html" class="NavRightSubListItemLink">Clasa a XII-a</a></li>
-                                </ul>
+                                <a href="#" class="NavRightListItemLink"><h3>Titularizare</h3></a>
                             </li>
                             <li class="NavRightListItem">
-                                <a href="#" class="NavRightListItemLink"><h3>Definitivat ▼</h3></a>
-                                <ul class="NavRightSubList">
-                                    <li class="NavRightSubListItem"><a href="clasa-a-ix-a.html" class="NavRightSubListItemLink">Clasa a IX-a</a></li>
-                                    <li class="NavRightSubListItem"><a href="clasa-a-x-a.html" class="NavRightSubListItemLink">Clasa a X-a</a></li>
-                                    <li class="NavRightSubListItem"><a href="clasa-a-xi-a.html" class="NavRightSubListItemLink">Clasa a XI-a</a></li>
-                                    <li class="NavRightSubListItem"><a href="clasa-a-xii-a.html" class="NavRightSubListItemLink">Clasa a XII-a</a></li>
-                                </ul>
+                                <a href="#" class="NavRightListItemLink"><h3>Definitivat</h3></a>
                             </li>
                         </ul>
                     </nav>
